# VectorDBAPI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/core/: main.py
app/core/api/routers/: chunks.py  documents.py  libraries.py
app/core/indexing/: __init__.py  brute_force_index.py  filters.py  indexing_algorithm.py  kdtree_index.py
app/core/models/: chunks.py  documents.py  libraries.py
app/core/services/: base_service.py  chunks.py  documents.py  libraries.py
app/infrastructure/: locking.py  persistence.py
client/: client.py  exceptions.py
tests/: conftest.py
tests/api/: test_chunks.py  test_documents.py  test_libraries.py
tests/indexing/: test_brute_force_index.py  test_filters.py  test_kdtree_index.py
tests/services/: test_chunks.py  test_documents.py  test_libraries.py
