[project]
name = "vectorapi"
version = "0.1.0"
description = "REST API for vector document storage and search"
authors = [{ name = "Joan", email = "joan.chamorro1116@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "fastapi>=0.115.12",
  "uvicorn>=0.22.0",
  "pydantic>=1.10.7",
  "requests>=2.28.2",
  "python-dateutil>=2.8.2",
  "numpy>=1.24.3",
]

[tool.uv]
dev-dependencies = [
  "pytest==7.3.1",
  "pytest-cov==4.0.0",
  "httpx==0.24.1",
  "black==23.3.0",
  "mypy==1.3.0",
  "flake8==6.0.0",
  "isort==5.12.0",
  "types-python-dateutil==2.8.19.13",
  "types-requests==2.28.11.17",
]

[tool.black]
line-length = 110
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 110
